Fix style of work item on mobile device

--- a/css/custom.css
+++ b/css/custom.css
@@ -141,7 +141,7 @@ section {
 
 .banner .content .banner-title {
     font-size: 5rem;
-    font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Avenir', 'Noto Sans TC', '微软雅黑', 'Microsoft YaHei', sans-serif;
     font-weight: 900;
     line-height: 1.3;
     color: #9FC2E2;
@@ -188,7 +188,7 @@ section {
 .watermark {
     opacity: 0.2;
     color: #9FC2E2;
-    font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Avenir', 'Noto Sans TC', '微软雅黑', 'Microsoft YaHei', sans-serif;
     font-size: 7rem;
     font-weight: 900;
     white-space: nowrap;
@@ -219,7 +219,7 @@ section {
 
 .skill-section .sub-title {
     margin: 30px 0;
-    font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Avenir', 'Noto Sans TC', '微软雅黑', 'Microsoft YaHei', sans-serif;
     font-size: 2.4rem;
     font-weight: 600;
     font-style: oblique;
@@ -509,6 +509,10 @@ section {
     color:#333;
 }
 
+.work-carousel .owl-nav button[class*=owl].disabled {
+    opacity: 0.5;
+}
+
 .work-carousel .owl-nav .owl-prev {
     left: -40px;
 }
@@ -662,8 +666,36 @@ section {
         margin-bottom: -20px;
     }
 
+    .expand-pane {
+        padding: 60px 15px 30px;
+    }
+    
+    .expand-pane.active {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow-y: auto;
+        z-index: 999;
+        background-color: #fff;
+    }
+
     .expand-pane .content {
         padding: 0;
         margin-bottom: 30px;
+    }
+
+    .expand-pane .close {
+        top: -40px;
+        right: 20px;
+    }
+
+    .work-carousel .work-carousel-item {
+        padding: 20px 25px;
+    }    
+
+    .owl-nav {
+        display: none;
     }
 }
